samples/_failures_safe/1761708407_122280_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_427c737f.c: In function ‘main’:
./samples/SAFE/__tmp_427c737f.c:143:9: error: expected declaration or statement at end of input
  143 |         add_edge(&graph, i, src, dest, weight);
      |         ^~~~~~~~
./samples/SAFE/__tmp_427c737f.c:143:9: error: expected declaration or statement at end of input
